--- a/index.ipynb
+++ b/index.ipynb
@@ -37,7 +37,7 @@
     "  * Artists with the most albums - Returns the artist with the highest amount of albums on the list of top albums \n",
     "  * Most popular word - Returns the word used most in amongst all album titles\n",
     "  * Histogram of albums by decade - Returns a histogram with each decade pointing to the number of albums released during that decade.\n",
-    "  * Histogram by genre - Returns a histogram with each genre pointing to the number of albums that are catagorized as being in that genre."
+    "  * Histogram by genre - Returns a histogram with each genre pointing to the number of albums that are categorized as being in that genre."
    ]
   }
  ],
