--- a/index.ipynb
+++ b/index.ipynb
@@ -43,6 +43,8 @@
     "\n",
     "### Functions to build-out:\n",
     "\n",
+    "Each of the following functions can be defined in the `functions.py` file. \n",
+    "\n",
     "* **Searching functions**\n",
     "  * Find by name - Takes in a string that represents the name of an album. Should return a dictionary with the correct album, or return `None`.\n",
     "  * Find by rank - Takes in a number that represents the rank in the list of top albums and returns the album with that rank. If there is no album with that rank, it returns `None`.\n",
