--- a/index.ipynb
+++ b/index.ipynb
@@ -64,7 +64,40 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Next Steps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have our functions querying our Album data, let's compare that data with the top 500 songs. We have another file -- a text file! -- that contains the data we need for the top 500 songs. Reading a text file is pretty similar to reading a csv file, however, it tends to need a bit more massaging to get your data formatted the way you want it.\n",
+    "\n",
+    "```python\n",
+    "    # open the text file in read\n",
+    "    text_file = open('top-500-songs.txt', 'r')\n",
+    "    # read each line of the text file\n",
+    "    # here is where you can print out the lines to your terminal and get an idea \n",
+    "    # for how you might think about re-formatting the data\n",
+    "    lines = text_file.readlines()\n",
+    "\n",
+    "    print(lines)\n",
+    "    # the output will look something like this:\n",
+    "['1\\tLike a Rolling Stone\\tBob Dylan\\t1965\\n', '2\\tSatisfaction\\tThe Rolling Stones\\t1965\\n', '3\\tImagine\\tJohn Lennon\\t1971\\n', \"4\\tWhat's Going On\\tMarvin Gaye\\t1971\\n\", '5\\tRespect\\tAretha Franklin\\t1967\\n', '6\\tGood Vibrations\\tThe Beach Boys\\t1966\\n', '7\\tJohnny B. Goode\\tChuck Berry\\t1958\\n', '8\\tHey Jude\\tThe Beatles\\t1968\\n', ...]\n",
+    "```\n",
+    "\n",
+    "It looks like `\\t` is how the text file is separating each element on a line. So, we need a function that can separate a string into a list. Then we can tell this function on what to split our string (i.e. `\\t`). From there we will have a list of lists that are formatted like the following:\n",
+    "```python\n",
+    "[\"RANK\", \"NAME\", \"ARTIST\", \"YEAR\"]\n",
+    "```\n",
+    "We need to use our knowledge of iterating to go through each of these elements and turn them into dictionaries with the keys, \"rank\", \"name\", \"artist\", \"year\", pointing to the appropriate values. So, for song number 1, we want it to look like:\n",
+    "```python\n",
+    "{'rank': 1, 'name': \"Like a Rolling Stone\", 'artist'\"Bob Dylan\": , 'year': 1965}\n",
+    "```\n",
+    "\n",
+    "Once we have a list of songs that are formatted like the above, we can move on to figuring out which songs are from the top albums and which albums and artists have the most 'top songs'."
+   ]
   }
  ],
  "metadata": {
